# NumDot

./: .gitignore  .gitmodules  .sconsign.dblite  CLAUDE.md  CONTRIBUTING.md  LICENSE  Readme.md  SConstruct  make_github_runner_config.py  numdot_config.template.py  version.py
.github/: FUNDING.yml
configure/: build_profile.json  derive_module_from_benchmark.py  generate_features.py  regenerate_docs.py  ufuncs.json  vfuncs.json
demo/: .gitignore  benchmarks.gd  benchmarks.tscn  example_math.gd  export_presets.cfg  generate_polygon.gd  icon.svg.import  main.tscn  math.gd  matrix.gd  new_script.gd  project.godot  reductions.gd  sieve_of_eratosthenes.gd  tests.gd  tests.tscn
doc/: .gitignore  Readme.md  pyproject.toml
doc/_templates/: versions.html
doc/introduction/: about.rst  tensors.rst
doc_classes/: NDArray.xml  NDRandomGenerator.xml  NDRange.xml  nd.xml  ndb.xml  ndf.xml  ndi.xml
docs/: .gitignore  .readthedocs.yaml  .readthedocs.yml  Readme.md  conf.py  index.rst  robots.txt
resources/: NumDot-Logo.afdesign
scons_tools/: features.py  scu.py
src/: as_array.h  asarray.h  asshape.h  conversion_array.h  conversion_axes.h  conversion_range.h  conversion_shape.h  conversion_slice.h  gdexample.cpp  gdexample.h  gdexample.os  nd.cpp  nd.h  nd.hpp  nd.os  ndarray.cpp  ndarray.h  ndarray.hpp  ndarray.os  ndb.cpp  ndb.h  ndb.hpp  ndf.cpp  ndf.h  ndf.hpp  ndi.cpp  ndi.h  ndi.hpp  ndrandomgenerator.cpp  ndrandomgenerator.hpp  ndrange.cpp  ndrange.h  ndutil.cpp  ndutil.hpp  pm_profiler.h  register_types.cpp  register_types.h  register_types.os  varray.h  (+2 more)
tests/: .gitignore  analyze.ipynb  pyproject.toml  run_tests.py
tests/array_api/: README.md  skips.txt  xfails.txt
tests/bridge/: arrays.py  client.py  conftest.py  protocol.py  test_blobs.py  test_nd_call.py  test_smoke.py
tests/numdot_xp/: __init__.py  _funcs.py
(+222 files in other folders)
