[tool.poetry]
name = "numdot-doc"
version = "0.1.0"
description = ""
authors = ["Lukas Tenbrink <lukas.tenbrink@gmail.com>"]
readme = "README.md"
packages = [
    { include = "gdscript.py", from = "godot-docs/_extensions" },
    { include = "godot_descriptions.py", from = "godot-docs/_extensions" },
]

[tool.poetry.dependencies]
python = "^3.12"
sphinx = "4.4.0"
pygments = "2.15.1"
sphinx-rtd-theme = "1.1.1"
sphinx-tabs = "3.4.0"
sphinx-copybutton = "0.5.1"
sphinx-notfound-page = "0.8.3"
sphinxext-opengraph = "0.7.5"
sphinxcontrib-applehelp = "1.0.4"
sphinxcontrib-htmlhelp = "2.0.1"
sphinxcontrib-qthelp = "1.0.3"
sphinxcontrib-serializinghtml = "1.1.5"
sphinxcontrib-devhelp = "1.0.2"
sphinxcontrib-video = "0.2.1rc0"
setuptools = "^75.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
